<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center|bottom"
    android:background="@drawable/bg3"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/normal_tray"
        android:src="@drawable/logo_login" />

    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_login_facebook"
        android:text="@string/login_with_fb"
        android:layout_marginTop="30dp" />

   

    <Button
        android:id="@+id/ImageButtonMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_login_mail"
        android:onClick="goLoginMail"
        android:text="@string/login_with_email"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/ImageButtonAnonymous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_login_visitor"
        android:onClick="sendMessage"
        android:text="@string/test_tcheck"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="goCreate"
        android:text="@string/pas_encore_inscrit"
        android:textColor="#000000"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="goReinitMdp"
        android:text="@string/mot_de_pass_oublie"
        android:textColor="#000000"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center|center_horizontal"
        android:text="@string/tcheckit_version"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="8dp" />

</LinearLayout>