<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="55dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_gravity="center"
    android:background="#FFFFFF"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/imageButtonMonCompte"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:layout_weight="4"
        android:background="#000000"
        android:drawableTop="@drawable/ico_mon_compte_blk"
        android:gravity="center_horizontal|bottom"
        android:onClick="goMonCompte"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/my_account"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/imageButtonMonPorteMonnaie"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="2dp"
        android:layout_weight="4"
        android:adjustViewBounds="true"
        android:background="#000000"
        android:contentDescription="@string/hello"
        android:drawableTop="@drawable/ico_mon_porte_monnaie_blk"
        android:gravity="center_horizontal|bottom"
        android:onClick="goMonPorteMonnaie"
        android:paddingBottom="5dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/my_wallet"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/imageButtonReglages"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="2dp"
        android:layout_weight="4"
        android:adjustViewBounds="true"
        android:background="#000000"
        android:contentDescription="@string/hello"
        android:drawableTop="@drawable/ico_reglages_blk"
        android:gravity="center_horizontal|bottom"
        android:onClick="goReglages"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/imageButtonAutres"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_weight="4"
        android:adjustViewBounds="true"
        android:background="#000000"
        android:contentDescription="@string/hello"
        android:drawableTop="@drawable/ico_autres_blk"
        android:gravity="center_horizontal|bottom"
        android:onClick="goAutres"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/other"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:textStyle="bold" />

</LinearLayout>