<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:background="@drawable/bg3"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        tools:context=".TestActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:adjustViewBounds="true"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/header_noir" />

            <!-- Bouton  -->

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_btn_orange"
                android:gravity="center"
                android:onClick="goPartagerAvecMesAmis"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/share_with_friends"
                android:textAllCaps="true"
                android:textColor="#ffffff" />
            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_btn_orange"
                android:gravity="center"
                android:onClick="goVisiterNotreSiteWeb"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/visit_website"
                android:textAllCaps="true"
                android:textColor="#ffffff" />
            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_btn_orange"
                android:gravity="center"
                android:onClick="goConditionsDUtilisation"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/terms_of_use"
                android:textAllCaps="true"
                android:textColor="#ffffff" />
            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_btn_orange"
                android:gravity="center"
                android:onClick="goCommentCaMarche"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/how_it_works"
                android:textAllCaps="true"
                android:textColor="#ffffff" />
            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_btn_orange"
                android:gravity="center"
                android:onClick="goContactezNous"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/contact_us"
                android:textAllCaps="true"
                android:textColor="#ffffff" />

            
        </LinearLayout>
    </LinearLayout>

<include layout="@layout/activity_menu_bas" />

    <ImageView
        android:id="@+id/imageButtonReglages"
        android:layout_width="67dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dip"
        android:background="@android:color/transparent"
        android:contentDescription="@string/hello"
        android:onClick="goMain"
        android:src="@drawable/img_center" />

</RelativeLayout>