<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:gravity="top"
        android:isScrollContainer="false"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".LoginActivity" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/normal_tray"
            android:src="@drawable/logo_login" />

        <TextView
            android:id="@+id/textDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/connection"
            android:textColor="#000000"
            android:textSize="48px" />

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/incorrect_password"
            android:textColor="#ff0000"
            android:textSize="10sp"
            android:visibility="invisible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp" >

            <View
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="10dp"
                android:text="@string/email"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="08"
                android:gravity="right"
                android:singleLine="true"
                android:textSize="12sp" >

                <requestFocus />
            </EditText>

            <View
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:background="#000000" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp" >

            <View
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="10dp"
                android:text="@string/password"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextPrenom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="right"
                android:inputType="textPassword"
                android:textSize="12dp" />

            <View
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:background="#000000" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:background="#000000" />

        <Button
            android:id="@+id/buttonValider"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="#000000"
            android:gravity="center"
            android:onClick="goValider"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/validate"
            android:textAllCaps="true"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/buttonRetour"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="#000000"
            android:gravity="center"
            android:onClick="goRetour"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/back_home"
            android:textAllCaps="true"
            android:textColor="#ffffff" />
    </LinearLayout>

</ScrollView>